# tiny-dnn

./: .gitignore  CMakeLists.txt  package.xml
config/: parser.yaml
launch/: parser.launch
src/: classifier.cpp  parser.cpp  trainer.cpp
